--- a/src/client/styles/globals.css
+++ b/src/client/styles/globals.css
@@ -21,8 +21,8 @@ body {
 
 nav {
   width: 100%;
-  background: purple;
-  color: #fff;
+  /*background: purple;*/
+  /*color: #fff;*/
   padding: 10px;
 }
 
@@ -32,14 +32,13 @@ nav .container {
 }
 
 main {
-  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background: rebeccapurple;
-  color: #fff;
+ /* background: rebeccapurple;*/
+  /*color: #fff;*/
 }
 
 main.orange {
