--- a/src/client/styles/globals.css
+++ b/src/client/styles/globals.css
@@ -57,7 +57,7 @@ main.salmon {
   left: 0;
   height: 100vh;
   width: 100%;
-  background: #066bb8;
+  background: #78B982;
   transform-origin: left;
 }
 
@@ -67,6 +67,6 @@ main.salmon {
   left: 0;
   height: 100vh;
   width: 100%;
-  background: #066bb8;
+  background: #78B982;
   transform-origin: right;
 }
